--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^3.0.34",
     "@ai-sdk/react": "^3.0.103",
-    "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.97.0",
+    "@insforge/sdk": "^1.1.5",
     "@types/uuid": "^10.0.0",
     "ai": "^6.0.101",
     "class-variance-authority": "^0.7.1",
