--- a/web/package.json
+++ b/web/package.json
@@ -13,13 +13,16 @@
     "@ai-sdk/react": "^3.0.105",
     "@insforge/sdk": "^1.1.5",
     "@types/uuid": "^10.0.0",
+    "@xyflow/react": "^12.10.1",
     "ai": "^6.0.103",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
     "lenis": "^1.3.17",
     "lucide-react": "^0.575.0",
+    "mermaid": "^11.12.3",
     "next": "16.1.6",
+    "next-mdx-remote": "^6.0.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
@@ -35,6 +38,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "puppeteer": "24.37.5",
     "shadcn": "^3.8.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
