--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "resend": "^6.9.2",
     "tailwind-merge": "^3.5.0",
     "uuid": "^13.0.0"
